Split in unit (on MRI) and feature (on JRuby) tests

--- a/cider-ci/jobs/all_tests.yml
+++ b/cider-ci/jobs/all_tests.yml
@@ -10,10 +10,10 @@ jobs:
       submodule: ['engines/datalayer']
       states: [passed]
     - type: job
-      job: tests_jruby
+      job: unit-tests
       states: [passed]
     - type: job
-      job: tests_mri
+      job: feature-tests
       states: [passed]
     - type: job
       job: code-checks
