--- a/cider-ci/jobs/unit-tests/scripts/prepare.yml
+++ b/cider-ci/jobs/unit-tests/scripts/prepare.yml
@@ -1,10 +1,4 @@
-bundle-mri:
-  exclusive-executor-resource: bundler
-  body: bin/bundle_with_cachestamp.sh
-
-bundle-jruby:
-  environment-variables:
-    RBENV_VERSION: jruby-9000
+bundle:
   exclusive-executor-resource: bundler
   body: bin/bundle_with_cachestamp.sh
 
@@ -17,12 +11,7 @@ test:
     set -eux
     bundle exec rspec $CIDER_CI_TASK_FILE
   start-when:
-    start-xvnc:
-      script: start-xvnc
     create-database:
       script: create-database
     npm:
       script: npm
-    bundle-jruby:
-      script: bundle-jruby
-
