--- a/cider-ci/jobs/feature-tests/scripts/test.yml
+++ b/cider-ci/jobs/feature-tests/scripts/test.yml
@@ -3,9 +3,12 @@ test:
     RBENV_VERSION: jruby-9000
   body: |
     set -eux
+    ruby -v
     bundle exec rspec $CIDER_CI_TASK_FILE
   start-when:
     - script: create-database
     - script: npm
     - script: start-xvnc
     - script: bundle-jruby
+    - script: precompile-assets
+
