--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pdfjs-dist": "1.1.535",
     "po2json": "0.4.1",
     "react": "0.14.0",
+    "react-dom": "0.14.0",
     "reactify": "1.1.1",
     "rusha": "0.8.3",
     "underscore.string": "3.2.2",
