--- a/cider-ci/jobs/feature-tests/scripts/test.yml
+++ b/cider-ci/jobs/feature-tests/scripts/test.yml
@@ -5,10 +5,14 @@ test:
     set -eux
     ruby -v
     bundle exec rspec $CIDER_CI_TASK_FILE
-  start-when:
-    - script: create-database
-    - script: npm
-    - script: start-xvnc
-    - script: bundle-jruby
-    - script: precompile-assets
-
+  start-when: # this must a map, not array, so it can be extended
+    create-database:
+      script: create-database
+    npm:
+      script: npm
+    start-vnc:
+      script: start-xvnc
+    bundle-jruby:
+      script: bundle-jruby
+    precompile-assets:
+      script: precompile-assets
