--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@eins78/typeahead.js": "0.11.2-pre.1",
+    "active-lodash": "1.2.0",
     "ampersand-model": "5.0.3",
     "ampersand-react-mixin": "0.1.4",
     "ampersand-rest-collection": "5.0.0",
@@ -20,7 +21,6 @@
     "hogan.js": "3.0.2",
     "jquery": "2.1.4",
     "jquery-ujs": "1.0.4",
-    "lodash": "3.10.1",
     "moment": "2.10.6",
     "pdfjs-dist": "1.1.535",
     "po2json": "0.4.1",
