--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "datalayer"]
 	path = engines/datalayer
 	url = https://github.com/Madek/madek-datalayer.git
+[submodule "node_modules"]
+	path = node_modules
+	url = https://github.com/Madek/madek-webapp-node-modules.git
