--- a/cider-ci/jobs/meta.yml
+++ b/cider-ci/jobs/meta.yml
@@ -27,14 +27,14 @@ jobs:
           name: "git tree contains latest commit from origin/HEAD"
           scripts:
             main:
-              body: "./dev/test/check-if-branch-current.sh"
+              body: "cider-ci/bin/check-if-branch-current"
         git_submodules_current:
           name: "git submodules trees all contain latest commit from origin/HEAD"
           scripts:
             main:
-              body: "./dev/test/check-if-submodules-current.sh"
+              body: "cider-ci/bin/check-if-submodules-current"
         git_submodules_merged:
           name: "git submodules are all merged to their origin/HEAD"
           scripts:
             main:
-              body: "./dev/test/check-if-submodules-merged.sh"
+              body: "cider-ci/bin/check-if-submodules-merged"
