--- a/cider-ci/jobs/feature-tests.yml
+++ b/cider-ci/jobs/feature-tests.yml
@@ -57,12 +57,12 @@ jobs:
           logs:
             glob: 'log/*.log'
             content-type: text/plain
-          styleguide_artefacts:
-            glob: 'tmp/styleguide-ref.tar.gz'
-            content-type: application/x-compressed
-          styleguide_hashes_new:
-            glob: 'tmp/styleguide-shasums.txt'
-            content-type: text/plain
+          # styleguide_artefacts:
+          #   glob: 'tmp/styleguide-ref.tar.gz'
+          #   content-type: application/x-compressed
+          # styleguide_hashes_new:
+          #   glob: 'tmp/styleguide-shasums.txt'
+          #   content-type: text/plain
           json_ld_dump:
             glob: 'tmp/ld_dump.json'
             content-type: application/json
@@ -95,9 +95,10 @@ jobs:
 #          CIDER_CI_TASK_FILE: spec/features/my_dashboard_spec.rb
 
       tasks:
-
         "spec/features/styleguide_spec.rb":
-          priority: 3
+          scripts:
+            test:
+              body: echo "disabled till it's faster and/or do we work on CSS."
 
         "json_ld_integration":
           name: 'JSON-LD Dump & Integration'
@@ -125,6 +126,3 @@ jobs:
 
       _cider-ci_generate-tasks:
         include-match: spec/features.*_spec.rb
-
-
-
