--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bulk-require": "0.2.1",
     "bulkify": "1.1.1",
     "check-dependencies": "0.11.0",
+    "classnames": "2.2.0",
     "coffee-reactify": "4.0.0",
     "coffee-script": "1.10.0",
     "global": "4.3.0",
@@ -29,6 +30,7 @@
     "moment": "2.10.6",
     "pdfjs-dist": "1.1.542",
     "po2json": "0.4.1",
+    "qs": "^5.2.0",
     "react": "0.14.0",
     "react-dom": "0.14.0",
     "react-file-drop": "0.1.6",
