ui: polybox: only handle local links
+ cleanup package.json

--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "hogan.js": "3.0.2",
     "jquery": "2.1.4",
     "jquery-ujs": "1.1.0-1",
-    "lodash.merge": "^3.3.2",
+    "local-links": "1.4.0",
     "moment": "2.10.6",
     "pdfjs-dist": "1.1.542",
     "po2json": "0.4.1",
-    "qs": "^5.2.0",
+    "qs": "5.2.0",
     "react": "0.14.0",
     "react-dom": "0.14.0",
     "react-file-drop": "0.1.6",
