cleanup: branch madek-v3 → master

--- a/cider-ci/jobs/feature-tests.yml
+++ b/cider-ci/jobs/feature-tests.yml
@@ -13,7 +13,7 @@ jobs:
 
     run-on:
     - type: branch
-      include-match: ^.*madek-v3.*$
+      include-match: ^.*master.*$
 
     depends-on:
     - type: job
