--- a/cider-ci/jobs/unit-tests.yml
+++ b/cider-ci/jobs/unit-tests.yml
@@ -8,7 +8,7 @@ jobs:
 
     run-on:
     - type: branch
-      include-match: ^.*madek-v3.*$
+      include-match: ^.*master.*$
 
     depends-on:
     - type: job
