--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "coffee-script": "1.10.0",
     "global": "4.3.0",
     "hashblot": "0.4.5",
-    "history": "1.12.5",
+    "history": "^1.13.1",
     "hogan.js": "3.0.2",
     "jquery": "2.1.4",
     "jquery-ujs": "1.1.0-1",
     "local-links": "1.4.0",
     "moment": "2.10.6",
-    "pdfjs-dist": "1.1.542",
+    "pdfjs-dist": "^1.3.22",
     "po2json": "0.4.1",
     "qs": "5.2.0",
     "react": "0.14.0",
@@ -37,13 +37,13 @@
     "reactify": "1.1.1",
     "rusha": "0.8.3",
     "underscore.string": "3.2.2",
-    "xhr": "2.1.0",
+    "xhr": "^2.2.0",
     "yamlify": "0.1.2"
   },
   "devDependencies": {
     "big-list-of-naughty-strings": "1.0.0",
     "coffee-react-transform": "3.3.0",
-    "coffeelint": "1.13.0"
+    "coffeelint": "^1.14.1"
   },
   "scripts": {
     "devtools": "npm run -s build-devtools && coffee --nodejs \"-r ./tmp/devtools.js\"",
