--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "pdfjs-dist": "^1.3.22",
     "po2json": "0.4.1",
     "qs": "5.2.0",
-    "react": "0.14.0",
-    "react-dom": "0.14.0",
-    "react-file-drop": "0.1.6",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-file-drop": "^0.1.7",
     "reactify": "1.1.1",
     "rusha": "0.8.3",
     "underscore.string": "3.2.2",
