--- a/cider-ci/jobs/code-checks.yml
+++ b/cider-ci/jobs/code-checks.yml
@@ -28,7 +28,7 @@ jobs:
             traits:
               rbenv: true
               ruby: true
-            environment_variables:
+            environment-variables:
               RAILS_ENV: test
               LANG: "en_US.UTF-8"
               RBENV_VERSION: 2.2
