--- a/package.json
+++ b/package.json
@@ -10,40 +10,40 @@
     "ampersand-react-mixin": "github:eins78/ampersand-react-mixin#1e7b0c4",
     "ampersand-rest-collection": "5.0.0",
     "any_sha1": "0.1.1",
-    "async": "1.5.0",
-    "bootstrap": "3.3.5",
-    "browserify": "11.2.0",
+    "async": "^1.5.2",
+    "bootstrap": "^3.3.6",
+    "browserify": "^11.2.0",
     "browserify-incremental": "3.0.1",
     "bulk-require": "0.2.1",
     "bulkify": "1.1.1",
     "check-dependencies": "0.11.0",
-    "classnames": "2.2.0",
+    "classnames": "^2.2.3",
     "coffee-reactify": "4.0.0",
     "coffee-script": "1.10.0",
     "global": "4.3.0",
     "hashblot": "0.4.5",
-    "history": "^1.13.1",
+    "history": "^2.0.0",
     "hogan.js": "3.0.2",
-    "jquery": "2.1.4",
-    "jquery-ujs": "1.1.0-1",
+    "jquery": "^2.2.0",
+    "jquery-ujs": "^1.2.0",
     "local-links": "1.4.0",
-    "moment": "2.10.6",
-    "pdfjs-dist": "^1.3.22",
+    "moment": "^2.11.2",
+    "pdfjs-dist": "^1.4.44",
     "po2json": "0.4.1",
-    "qs": "5.2.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-file-drop": "^0.1.7",
+    "qs": "^6.1.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-file-drop": "^0.1.8",
     "reactify": "1.1.1",
     "rusha": "0.8.3",
-    "underscore.string": "3.2.2",
+    "underscore.string": "^3.2.3",
     "xhr": "^2.2.0",
     "yamlify": "0.1.2"
   },
   "devDependencies": {
     "big-list-of-naughty-strings": "1.0.0",
     "coffee-react-transform": "3.3.0",
-    "coffeelint": "^1.14.1"
+    "coffeelint": "^1.14.2"
   },
   "scripts": {
     "devtools": "npm run -s build-devtools && coffee --nodejs \"-r ./tmp/devtools.js\"",
