--- a/cider-ci/jobs/feature-tests.yml
+++ b/cider-ci/jobs/feature-tests.yml
@@ -46,19 +46,19 @@ jobs:
 
         trial-attachments:
           screenshots:
-            glob: tmp/capybara/*.png
+            include-match: tmp/capybara/*.png
             content-type: image/png
           logs:
-            glob: 'log/*.log'
+            include-match: 'log/*.log'
             content-type: text/plain
           styleguide_artefacts:
-            glob: 'tmp/styleguide-ref.tar.gz'
+            include-match: 'tmp/styleguide-ref.tar.gz'
             content-type: application/x-compressed
           styleguide_hashes_new:
-            glob: 'tmp/styleguide-shasums.txt'
+            include-match: 'tmp/styleguide-shasums.txt'
             content-type: text/plain
           json_ld_dump:
-            glob: 'tmp/ld_dump.json'
+            include-match: 'tmp/ld_dump.json'
             content-type: application/json
 
         traits:
@@ -104,8 +104,3 @@ jobs:
 
       _cider-ci_generate-tasks:
         include-match: spec/features.*_spec.rb
-
-
-
-
-
