--- a/cider-ci/jobs/unit-tests.yml
+++ b/cider-ci/jobs/unit-tests.yml
@@ -40,16 +40,16 @@ jobs:
 
         trial-attachments:
           logs:
-            glob: 'log/*.log'
+            include-match: 'log/*.log'
             content-type: text/plain
           styleguide_artefacts:
-            glob: 'tmp/styleguide-ref.tar.gz'
+            include-match: 'tmp/styleguide-ref.tar.gz'
             content-type: application/x-compressed
           styleguide_hashes_new:
-            glob: 'tmp/styleguide-shasums.txt'
+            include-match: 'tmp/styleguide-shasums.txt'
             content-type: text/plain
           json_ld_dump:
-            glob: 'tmp/ld_dump.json'
+            include-match: 'tmp/ld_dump.json'
             content-type: application/json
 
         traits:
