--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "node_modules"]
 	path = node_modules
 	url = https://github.com/Madek/madek-webapp-node-modules.git
+[submodule "public/assets"]
+	path = public/assets
+	url = https://github.com/Madek/madek_webapp_assets.git
