--- a/cider-ci/jobs/feature-tests.yml
+++ b/cider-ci/jobs/feature-tests.yml
@@ -18,7 +18,7 @@ jobs:
     depends-on:
     - type: job
       job: tests
-      submodule: ['engines/datalayer']
+      submodule: ['datalayer']
       states: [passed]
 
     context:
@@ -31,12 +31,15 @@ jobs:
 
       task-defaults:
 
+        environment-variables:
+          RBENV_VERSION: jruby-9.0.5.0
+
         _cider-ci_include:
           - cider-ci/shared/attachments.yml
           - cider-ci/shared/environment-variables.yml
 
         eager-trials: 1
-        max-auto-trials: 2
+        max-auto-trials: 1
 
         ports:
           XVNC_PORT:
@@ -50,21 +53,19 @@ jobs:
             timeout: 60
 
         traits:
+          Cislave5: true
           firefox-esr: true
           imagemagick: true
-          jruby-9000: true
           linux: true
           nodejs: true
           postgresql: true
           rbenv: true
-          ruby: true
           tightvnc: true
 
 
         scripts:
 
           _cider-ci_include:
-            - cider-ci/jobs/feature-tests/scripts/prepare.yml
             - cider-ci/shared/scripts/manage-database.yml
             - cider-ci/shared/scripts/manage-xvnc.yml
             - cider-ci/jobs/feature-tests/scripts/test.yml
