Add submodule 'vendor' (jruby + its gems for now)

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "zhdk-integration"]
 	path = zhdk-integration
 	url = https://github.com/Madek/madek-zhdk-integration.git
+[submodule "vendor"]
+	path = vendor
+	url = https://github.com/Madek/madek_webapp_vendor.git
