Run CI jobs on every branch unless the name contains 'no-ci'

--- a/cider-ci/jobs/all_tests.yml
+++ b/cider-ci/jobs/all_tests.yml
@@ -17,6 +17,7 @@ jobs:
     run-on:
     - type: branch
       include-match: ^.+$
+      exclude-match: ^.*no-ci.*$
     context:
       tasks:
         all:
