--- a/cider-ci/jobs/code-checks.yml
+++ b/cider-ci/jobs/code-checks.yml
@@ -11,7 +11,8 @@ jobs:
 
     run-on:
     - type: branch
-      include-match: ^.*master.*$
+      include-match: ^.+$
+      exclude-match: ^.*no-ci.*$
 
     context:
 
