--- a/cider-ci/jobs/feature-tests.yml
+++ b/cider-ci/jobs/feature-tests.yml
@@ -15,7 +15,9 @@ jobs:
 
     run-on:
     - type: branch
-      include-match: ^.*master.*$
+      include-match: ^.+$
+      exclude-match: ^.*no-ci.*$
+
 
     depends-on:
     - type: job
