--- a/cider-ci/jobs/meta-checks.yml
+++ b/cider-ci/jobs/meta-checks.yml
@@ -10,7 +10,8 @@ jobs:
 
     run-on:
     - type: branch
-      include-match: ^.*master.*$
+      include-match: ^.*$
+      exclude-match: ^.*no-ci.*$
 
     context:
       task-defaults:
