--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ AllCops:
     - 'tmp/**/*'
     - 'node_modules/**/*'
     - 'zhdk-integration/**/*'
+    - 'vendor/**/*'
   RunRailsCops: true
 
 Lint/AmbiguousOperator:
